tests/ui/parser/keyword-move-as-identifier.stderr
error: expected identifier, found keyword `move`
  --> $DIR/keyword-move-as-identifier.rs:4:9
   |
LL |     let move = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: escape `move` to use it as an identifier
   |
LL |     let r#move = "foo";
   |         ++

error: aborting due to 1 previous error

