tests/ui/parser/keyword-move-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py move'

fn main() {
    let move = "foo"; //~ error: expected identifier, found keyword `move`
}
